--- a/mypy.ini
+++ b/mypy.ini
@@ -1,9 +1,17 @@
 [mypy]
 pretty = True
 show_error_context = True
-show_error_codes = True
+show_column_numbers = True
+show_error_end = True
+
 check_untyped_defs = True
-namespace_packages = True
+
+# see https://mypy.readthedocs.io/en/stable/error_code_list2.html
+warn_redundant_casts = True
+strict_equality = True
+warn_unused_ignores = True
+enable_error_code = deprecated,redundant-expr,possibly-undefined,truthy-bool,truthy-iterable,ignore-without-code,unused-awaitable
+
 
 # an example of suppressing
 # [mypy-my.config.repos.pdfannots.pdfannots]
